stats icon alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -91,9 +91,9 @@ img {
 
 }
 
-.substats {
-    width: 100%;
-}
+/*.substats {*/
+/*    width: 100%;*/
+/*}*/
 
 .stats_community, .stats_messages {
     justify-content: flex-start;
